[project]
name = "fastapi-ca"
version = "0.1.0"
description = ""
authors = [
    {name = "Jaekyoung Kim",email = "rlakim5521@naver.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "py-ulid (>=1.0.3,<2.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "alembic (>=1.17.1,<2.0.0)",
    "mysqlclient (>=2.2.7,<3.0.0)",
    "dependency-injector (>=4.48.2,<5.0.0)",
    "pydantic[email] (>=2.12.3,<3.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pydantic-settings (>=2.11.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
show_error_codes = true
# 패키지 이름 문제 해결: namespace_packages 사용
namespace_packages = true
explicit_package_bases = true

# 특정 모듈/패키지 무시 (필요시 수정)
[[tool.mypy.overrides]]
module = [
    "database",
    "alembic.*",
    "migrations.*",
    "ulid",
    "passlib.*",
]
ignore_missing_imports = true
[tool.poetry.group.dev.dependencies]
mypy = "^1.18.2"

